--- a/index.html
+++ b/index.html
@@ -117,3 +117,18 @@
       <a href="#slide2" class="btn btn-circle">❯</a>
     </div>
   </div>
+  <!-- Slide 2 -->
+  <div id="slide2" class="carousel-item relative w-full">
+    <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+      <!-- text content -->
+      <div class="space-y-7 flex-1">
+        <h2 class="text-6xl font-bold">
+          Ride-on R15 V4 <br />
+          with Smile
+        </h2>
+        <p>
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+          amet sint. Velit officia consequat duis enim velit mollit.
+        </p>
+        <button class="btn bg-bike-primary text-white">Purchase</button>
+      </div>
