--- a/index.html
+++ b/index.html
@@ -132,3 +132,15 @@
         </p>
         <button class="btn bg-bike-primary text-white">Purchase</button>
       </div>
+      <!-- image content -->
+      <div class="flex-1">
+        <img src="./images/slider/bike2.png" class="w-[400px]" />
+      </div>
+    </div>
+    <div
+      class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+    >
+      <a href="#slide1" class="btn btn-circle">❮</a>
+      <a href="#slide3" class="btn btn-circle">❯</a>
+    </div>
+  </div>
