add main section

--- a/index.html
+++ b/index.html
@@ -144,3 +144,8 @@
       <a href="#slide3" class="btn btn-circle">❯</a>
     </div>
   </div>
+    <!-- Main Section -->
+    <main class="md:container mx-auto">
+      <!-- featured bike section - Homework -->
+      <section></section>
+      
