--- a/index.html
+++ b/index.html
@@ -294,3 +294,12 @@
     </div>
   </section>
 </main>
+ <!-- Footer Section -->
+ <footer class="footer bg-black text-neutral-content p-10">
+  <aside>
+    <p>
+      ACME Industries Ltd.
+      <br />
+      Providing reliable tech since 1992
+    </p>
+  </aside>
