--- a/index.html
+++ b/index.html
@@ -303,3 +303,13 @@
       Providing reliable tech since 1992
     </p>
   </aside>
+  <nav>
+    <h6 class="footer-title">Get The App</h6>
+    <div class="grid grid-cols-1 gap-4">
+      <a><img class="w-36" src="./images/others/android.png" alt="" /></a>
+      <a> <img class="w-36" src="./images/others/ios.png" alt="" /> </a>
+    </div>
+  </nav>
+</footer>
+</body>
+</html>
